[project]
name = "fourmius-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "asyncpg==0.29.0",
    "black==24.3.0",
    "certifi==2024.7.4",
    "click==8.1.7",
    "dnspython==2.6.1",
    "email-validator==2.0.0.post2",
    "fastapi[standard]>=0.115.0",
    "greenlet==3.0.0",
    "h11==0.14.0",
    "httpcore==0.18.0",
    "httptools==0.6.1",
    "httpx==0.25.0",
    "idna==3.7",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.4",
    "mako==1.2.4",
    "markupsafe==2.1.3",
    "mypy-extensions==1.0.0",
    "orjson==3.10.7",
    "packaging==23.2",
    "pathspec==0.11.2",
    "platformdirs==3.11.0",
    "pluggy==1.3.0",
    "psycopg2-binary==2.9.9",
    "pydantic-core==2.10.1",
    "pydantic-extra-types==2.1.0",
    "pydantic-settings==2.0.3",
    "pydantic==2.4.2",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.19",
    "typing-extensions==4.8.0",
    "ujson==5.8.0",
    "uvicorn==0.23.2",
    "uvloop==0.18.0",
    "watchfiles==0.21.0",
    "websockets==11.0.3",
]
